--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>redes sociais</title>
-    <link rel="stylesheet" href="assets/style.css"
+    <title>Redes Sociais</title>
+    <link rel="stylesheet" href="graficos/style.css">
 </head>
 <body>
     <header>
@@ -20,8 +20,11 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por fefe</p>
+        <p>Desenvolvido por Ariane</p>
     </footer>
+
+    <script type="module" src="graficos/informacoesGlobais.js"></script>
+
 </body>
 
 </html>
