--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redes Sociais</title>
     <link rel="stylesheet" href="graficos/style.css">
+    <script src="https://cdn.plot.ly/plotly-2.27.0.min.js" charset="utf-8"></script>
+
 </head>
 <body>
     <header>
@@ -20,11 +22,11 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por fefe</p>
+        <p>Desenvolvido por Chatonilda</p>
     </footer>
 
+    
     <script type="module" src="graficos/informacoesGlobais.js"></script>
-
+    <script type="module" src="graficos/quantidadeUsuarios.js"></script>
 </body>
-
 </html>
