--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Chatonilda</p>
+        <p>Desenvolvido por fefe</p>
     </footer>
 
     
